--- a/style.css
+++ b/style.css
@@ -1,14 +1,3 @@
-body {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  font-family: "LuckiestGuy", sans-serif;
-}
-
-canvas {
-  background-color: black;
-}
-
 h1 {
   font-family: "LuckiestGuy", sans-serif;
 }
@@ -18,4 +7,63 @@ h1 {
   src: url("./img/5.Font/Luckiest_Guy/LuckiestGuy-Regular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+  font-family: "LuckiestGuy", sans-serif;
+  background-color: black;
+  overflow: hidden;
+  position: relative;
+}
+
+canvas {
+  display: block;
+  background-color: black;
+}
+
+.game-container {
+  position: relative;
+  width: 720px;
+  height: 480px;
+}
+
+#start-screen {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 720px;
+  height: 480px;
+  z-index: 10;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#start-background {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+#start-btn {
+  max-width: 25%;
+  margin: 10px;
+  cursor: pointer;
+  z-index: 1;
+}
+
+#instructions {
+  max-width: 60%;
+  margin: 10px;
+  cursor: pointer;
+  z-index: 1;
 }
