--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 h1 {
   font-family: "LuckiestGuy", sans-serif;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 @font-face {
@@ -16,9 +17,15 @@ body {
   height: 100vh;
   margin: 0;
   font-family: "LuckiestGuy", sans-serif;
-  background-color: black;
+  background-image: url("./img/6.Botones/Start/ocean_Background.jpg");
+  background-repeat: no-repeat;
+  background-size: 100%;
   overflow: hidden;
   position: relative;
+  flex-direction: column;
+  background-position: center;
+  letter-spacing: 3px;
+  background-color: black;
 }
 
 canvas {
@@ -66,4 +73,129 @@ canvas {
   margin: 10px;
   cursor: pointer;
   z-index: 1;
+}
+
+#sound-toggle {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  width: 32px;
+  height: 32px;
+  z-index: 1001;
+  cursor: pointer;
+}
+
+.navigation {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  display: flex;
+  gap: 16px; /* Abstand zwischen den Buttons */
+  z-index: 1001;
+}
+
+.navigation button {
+  width: 32px;
+  height: 32px;
+  background: none;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: -20;
+}
+
+.navigation img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  z-index: -2;
+}
+
+#instructionsButton {
+  font-size: 18px;
+  background-color: black;
+  color: white;
+  border-radius: 50%;
+  width: 32px;
+  height: 32px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#instructionsOverlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 720px;
+  height: 480px;
+  background-color: rgba(0, 0, 0, 0.85);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  z-index: 999;
+}
+
+#instructionsOverlay img {
+  max-width: 80%;
+}
+
+#close-btn {
+  position: absolute;
+  top: 100px;
+  right: 90px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  width: 32px;
+  height: 32px;
+  padding: 0;
+  filter: invert(1);
+  z-index: 10;
+}
+
+#close-btn img {
+  width: 100%;
+  height: 100%;
+}
+
+.instructions {
+  display: flex;
+  top: 0;
+  left: 0;
+  width: 800px;
+  height: 350px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 2;
+}
+
+.opacity {
+  opacity: 0;
+  visibility: hidden;
+}
+
+.d_none {
+  display: none;
+}
+
+.instructionGuide {
+  color: white;
+}
+
+@media only screen and (max-width: 720px) {
+  canvas {
+    width: 100% !important;
+  }
+}
+
+@media only screen and (max-height: 480px) {
+  canvas {
+    height: 100vh;
+  }
 }
