--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ canvas {
   z-index: 10;
   width: 100%;
   height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
 #start-background {
@@ -99,7 +100,7 @@ canvas {
   right: 10px;
   display: flex;
   gap: 10px;
-  z-index: 100;
+  z-index: 1000;
 }
 
 .navigation button {
@@ -137,7 +138,7 @@ canvas {
   left: 50%;
   transform: translateX(-50%);
   gap: 12px;
-  z-index: 1000;
+  z-index: 10;
   max-width: 720px;
   width: 100%;
 }
@@ -174,8 +175,8 @@ canvas {
 
 #close-btn {
   position: absolute;
-  top: 16px;
-  right: 16px;
+  top: 96px;
+  right: 96px;
   width: 32px;
   height: 32px;
   background: none;
@@ -254,7 +255,6 @@ canvas {
   cursor: pointer;
   z-index: 1001;
 }
-
 
 @media only screen and (max-width: 1024px) {
   .mobileJoystick {
