--- a/style.css
+++ b/style.css
@@ -58,8 +58,20 @@ canvas {
   z-index: 1;
 }
 
-#start-screen,
 #instructionsOverlay {
+  position: absolute;
+  inset: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  z-index: 100;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+#start-screen{
   position: absolute;
   inset: 0;
   display: flex;
@@ -69,6 +81,7 @@ canvas {
   z-index: 10;
   width: 100%;
   height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
 #start-background {
@@ -137,7 +150,7 @@ canvas {
   left: 50%;
   transform: translateX(-50%);
   gap: 12px;
-  z-index: 1000;
+  z-index: 10;
   max-width: 720px;
   width: 100%;
 }
@@ -174,8 +187,8 @@ canvas {
 
 #close-btn {
   position: absolute;
-  top: 16px;
-  right: 16px;
+  top: 72px;
+  right: 92px;
   width: 32px;
   height: 32px;
   background: none;
@@ -197,10 +210,6 @@ canvas {
 
 .d_none {
   display: none;
-}
-
-.instructionGuide {
-  color: white;
 }
 
 #rotate-device-overlay {
@@ -254,7 +263,6 @@ canvas {
   cursor: pointer;
   z-index: 1001;
 }
-
 
 @media only screen and (max-width: 1024px) {
   .mobileJoystick {
